# bigcolor

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  release.config.cjs
.github/workflows/: demo.yml  release.yml
demo/: Cargo.toml  README.md  Trunk.toml  index.html  index.scss  styles.css  test.rs
demo/src/: app.rs
examples/: basic.rs  big_color_demo.rs  debug_conversion.rs  debug_hsl.rs  debug_hsl_input.rs  debug_hsv.rs  debug_hsv_brightness.rs  debug_hsv_full.rs  diagnose.rs  feature_demo.rs  gradient_demo.rs  test_bulk_converter.rs  test_cmyk.rs  test_colors.rs  test_hex.rs  test_peniko_conversion.rs  test_regex.rs  test_space_hsl.rs  test_space_hsl_final.rs  test_space_hsl_simple.rs  test_space_hsl_specific.rs
examples/todo/: color.rs  gradients.rs
src/: accessibility.rs  big_color.rs  cint.rs  color_space.rs  conversion.rs  gradient.rs  lib.rs  matrix_utils.rs  parse.rs  solid.rs
src/parser/: mod.rs
src/to-port/: color.rs
src/to_port/: gradients.rs
tests/: bigcolor.rs
