[package]
name = "bigcolor"
version = "0.1.0"
authors = ["Nor Khasyatillah <mazznoer@ymail.com>", "Jorge Soares"]
edition = "2021"
description = "Advanced color manipulation library for Rust"
readme = "README.md"
repository = "https://github.com/ducflair/bigcolor"
documentation = "https://docs.rs/bigcolor/"
license = "MIT OR Apache-2.0"
keywords = ["color", "colour", "css", "parser", "manipulation", "bigcolor", "peniko"]
categories = ["graphics", "parser-implementations"]
exclude = [
	".github/*",
	"tests/*",
]

[package.metadata.docs.rs]
features = ["named-colors", "lab", "rust-rgb", "cint", "serde"]

[features]
default = ["named-colors"]
named-colors = ["phf"]
rust-rgb = ["rgb"]
peniko = ["dep:peniko"]

[[test]]
name = "named_colors"
required-features = ["named-colors"]

[[example]]
name = "big_color_demo"
path = "examples/big_color_demo.rs"

[dependencies]
cint = { version = "^0.3.1", optional = true }
lab = { version = "0.11.0", optional = true }
phf = { version = "0.11.0", optional = true, features = ["macros"] }
rgb = { version = "0.8.33", optional = true }
serde = { version = "1.0.139", optional = true, features = ["derive"] }
peniko = { version = "0.3.1", optional = true }
palette = { version = "0.7.3", features = ["std"] }

[dev-dependencies]
serde_test = "1.0.139"
