[package]
name = "bigcolor"
version = "0.0.0-development"
edition = "2021"
description = "A powerful Rust color library for parsing, converting, and manipulating colors across multiple formats"
license = "MIT"
repository = "https://github.com/ducflair/bigcolor"
keywords = ["color", "color-parser", "color-conversion", "peniko", "contrast"]
categories = ["graphics", "web-programming"]
exclude = [
    "tests/**/*",
    "examples/**/*",
    "public/**/*",
    "node_modules/**/*",
    "demo/**/*",
]

[lib]
name = "bigcolor"
path = "src/lib.rs"

[dependencies]
regex = "1.9.1"
lazy_static = "1.4.0"
peniko = "0.4.0"


[workspace]
members = [
    "demo"
]