[package]
name = "bigcolor-demo"
version = "0.1.0"
edition = "2021"
description = "Demo for BigColor library"
readme = "README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.21", features=["csr"] }
bigcolor = { path = ".." }
web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlElement", "CssStyleDeclaration", "InputEvent", "Clipboard", "Navigator"] }
wasm-bindgen = "0.2"
gloo = "0.10"
